# MTM

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: EnergySplineInterpolator.h  FEMHessianAssembler.h  acoustic_tensor.h
include/defects/: Defectanalysis.h
include/geometry/: DomainDimensions.h  DomainInfo.h  LatticeGenerator.h  NeighborAnalyzer.h  Point2D.h
include/interatomic/: inter_atomic.h
include/lattice_energy/: BaseLatticeCalculator.h  EnergyFunctions.h  SquareLatticeCalculator.h  Strain_Energy_LatticeCalculator.h  TriangularLatticeCalculator.h
include/loading/: DeformationCalculator.h  NanoIndenter.h
include/mesh/: CGALTypes.h  ElementTriangle2D.h  MeshGenerator.h  Remesher.h  Triangle.h
include/optimization/: BLEICOptimizer.h  CGOptimizer.h  LBFGSOptimizer.h  LatticeOptimizer.h
include/output/: ChangeMeasures.h  configuration_saver.h  triangulation_to_vtk.h
include/reductions/: LagrangeReduction.h
include/tensors/: tensor_example.h
include/utils/: dislocation_utils.h
src/: ChangeMeasures.cpp  DefectAnalysis.cpp  DeformationCalculator.cpp  DeformationCalculator.tempcpptemp  DomainInfo.cpp  ElementTriangle2D.cpp  FEMHessianAssembler.cpp  LatticeGenerator.cpp  MeshGenerator.cpp  NanoIndenter.cpp  NeighborAnalyzer.cpp  Remesher.cpp  SquareLatticeCalculator.cpp  Strain_Energy_LatticeCalculator.cpp  TriangularLatticeCalculator.cpp  acoustic_tensor.cpp  configuration_saver.cpp  dislocation_utils.cpp  energy_spline_interpolator.cpp  inter_atomic.cpp  lagrange_reduction.cpp  main.cpp  tensor_example.cpp  triangulation_to_vtk.cpp
src/optimization/: BLEICOptimizer.cpp  CGOptimizer.cpp  LBFGSOptimizer.cpp  LatticeOptimizer.cpp
tests/: test_lattice_generator.cpp
